--- a/style.css
+++ b/style.css
@@ -1,21 +1,41 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
   display: flex;
+  height: 100vh;
   flex-direction: row;
   font-family: playwrite_gbs, sans-serif, Impact;
+  background-image: url(img/bg-leaf-eugene-golovesov.jpg);
 }
 
 .logo-container {
   display: flex;
   justify-content: center;
-  align-self: center;
+  margin-top: 10rem;
   height: 6rem;
   flex-basis: 35%;
-  background-color: gray;
+  column-gap: 2rem;
+  padding: 0.5rem;
+  background-color: rgba(0,0,0, 0.3);
+  color: white;
+}
+
+.logo-header {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .form-container {
