--- a/style.css
+++ b/style.css
@@ -62,10 +62,15 @@ body {
 
 .user-form {
   background-color: white;
-  padding: 0.8rem 0;
+  padding: 1.5rem 0;
   display: flex;
   flex-direction: column;
   row-gap: 2rem;
+  box-shadow:
+    0px 5px 0px 0px rgba(169, 27, 27, 0.45),
+    0px 10px 0px 0px rgba(169, 27, 27, 0.36),
+    0px 15px 0px 0px rgba(169, 27, 27, 0.18),
+    0px 20px 0px 0px rgba(169, 27, 27, 0.06);
 }
 
 .introduction,
@@ -115,6 +120,7 @@ body {
   border-radius: 4px;
   margin-top: 2rem;
   margin-left: 3rem;
+  cursor: pointer;
 }
 
 .log-in-button {
@@ -123,8 +129,9 @@ body {
 }
 
 input#pwd:invalid,
-input#confirmpwd,
+input#confirmpwd:invalid,
 input:user-invalid {
+  position: relative;
   border-color: red;
 }
 
