--- a/style.css
+++ b/style.css
@@ -66,8 +66,7 @@ body {
   display: flex;
   flex-direction: column;
   row-gap: 2rem;
-  box-shadow:
-    0px 5px 0px 0px rgba(169, 27, 27, 0.45),
+  box-shadow: 0px 5px 0px 0px rgba(169, 27, 27, 0.45),
     0px 10px 0px 0px rgba(169, 27, 27, 0.36),
     0px 15px 0px 0px rgba(169, 27, 27, 0.18),
     0px 20px 0px 0px rgba(169, 27, 27, 0.06);
@@ -123,9 +122,19 @@ body {
   cursor: pointer;
 }
 
-.log-in-button {
+.confirm-account-button:hover {
+  background-color: rgb(206, 35, 35);
+}
+
+.log-in-link {
   color: rgb(169, 27, 27);
   font-weight: bold;
+  text-decoration: none;
+}
+
+.log-in-link:hover,
+.log-in-link:active {
+  color: rgb(206, 35, 35);
 }
 
 input#pwd:invalid,
@@ -133,6 +142,20 @@ input#confirmpwd:invalid,
 input:user-invalid {
   position: relative;
   border-color: red;
+}
+
+input#pwd:invalid + span {
+  position: relative;
+  white-space: nowrap;
+}
+
+input#pwd:invalid + span::before {
+    font-size: 0.8rem;
+    position: absolute;
+    content: "*Passwords do not match.";
+    color: red;
+    top: 30px;
+    right: 110px;
 }
 
 input:valid {
