Fix generated content of pwd

--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ input:user-invalid {
 input#pwd:invalid + span {
   position: relative;
   white-space: nowrap;
+  overflow: hidden;
 }
 
 input#pwd:invalid + span::before {
