--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: row;
-  font-family: playwrite_gbs, sans-serif, Impact;
+  font-family: playwrite_gbs, sans-serif, Impact, system-ui;
   background-image: url(img/bg-leaf-eugene-golovesov.jpg);
 }
 
@@ -146,17 +146,15 @@ input:user-invalid {
 
 input#pwd:invalid + span {
   position: relative;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 input#pwd:invalid + span::before {
-    font-size: 0.8rem;
-    position: absolute;
-    content: "*Passwords do not match.";
-    color: red;
-    top: 30px;
-    right: 110px;
+  font-size: 0.8rem;
+  position: absolute;
+  content: "*Passwords do not match.";
+  color: red;
+  top: 30px;
+  right: 110px;
 }
 
 input:valid {
