--- a/style.css
+++ b/style.css
@@ -23,27 +23,42 @@ html {
 
 body {
   display: flex;
-  min-height: 100vh;
+  min-height: 100dvh;
   flex-direction: row;
   font-family: playwrite_gbs, sans-serif, Impact, system-ui;
   background-image: url(img/bg-leaf-eugene-golovesov.jpg);
 }
 
-.logo-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 10rem;
-  height: 6rem;
+.left-container {
   flex-basis: 35%;
-  column-gap: 2rem;
-  padding: 0.5rem;
-  background-color: rgba(0, 0, 0, 0.3);
   color: white;
+  display: flex;
+  flex-direction: column;
 }
 
-.logo-header {
+.logo-container {
+  display: flex;
+  height: 6rem;
+  padding: 0.5rem;
+  margin-top: 6rem;
+  margin-bottom: auto;
+  background-color: rgba(0, 0, 0, 0.3);
+  justify-content: center;
+  column-gap: 1rem;
+}
+
+.logo-image {
+  height: 100%;
+}
+
+.logo-title {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.ref-to-author {
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .form-container {
@@ -126,10 +141,18 @@ body {
   background-color: rgb(206, 35, 35);
 }
 
-.log-in-link {
+a {
   color: rgb(169, 27, 27);
-  font-weight: bold;
   text-decoration: none;
+}
+
+a:hover,
+a:active {
+  color: rgb(206, 35, 35);
+}
+
+.log-in-link {
+  font-weight: bold;
 }
 
 .log-in-link:hover,
